[tool.poetry]
name = "basic-asyncio-example"
version = "0.1.0"
description = ""
authors = ["Alberto <camara@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
pytest-asyncio = "^0.14.0"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
